dataset1235/2025-2/2318198438/users/1018361269/executions/2601575092_1467685783.log
== SUBMISSION (2025-08-13 14:15:02)
-- CODE: 
num1=35*2
print(num1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
70
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 14:14:02)
-- CODE: 
num1=35
multi= num1*2
print(  multi)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
70
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:19:38)
-- CODE: 
numb= 35
multi= numb*2
print("o total da conta é", multi)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:07:57)
-- CODE: 
print(35*2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
70
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:13:59)
-- CODE: 
num1=35
multi= num1*2
print(  multi)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
70
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:20:04)
-- CODE: 
numb= 35
multi= numb*2
print("o total da conta é", multi)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:17:33)
-- CODE: 
num1= 35*2
print(num1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
70
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:11:04)
-- CODE: 
num1=35
num2=35
soma= num1+num2
print("o total da conta é", soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:18:21)
-- CODE: 
num= 35*2
print("o total da conta é", num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:18:22)
-- CODE: 
num= 35*2
print("o total da conta é", num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:19:39)
-- CODE: 
numb= 35
multi= numb*2
print("o total da conta é", multi)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:18:16)
-- CODE: 
num= 35*2
print("o total da conta é", num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:11:49)
-- CODE: 
num1=35
num2=35
soma= num1+num2
print( 'soma')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
soma
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
soma
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:18:15)
-- CODE: 
num= 35*2
print("o total da conta é", num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:08:24)
-- CODE: 
print(35*20)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
700
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 14:13:22)
-- CODE: 
num1=35
multi= num1*2
print( "a conta deu", multi)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
a conta deu 70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
a conta deu 70
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 14:11:08)
-- CODE: 
num1=35
num2=35
soma= num1+num2
print("o total da conta é", soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:20:04)
-- CODE: 
numb= 35
multi= numb*2
print("o total da conta é", multi)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:19:36)
-- CODE: 
numb= 35
multi= numb*2
print("o total da conta é", multi)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:14:59)
-- CODE: 
num1=35*2
print(num1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
70
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:19:39)
-- CODE: 
numb= 35
multi= numb*2
print("o total da conta é", multi)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 14:17:35)
-- CODE: 
num1= 35*2
print(num1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
70
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 14:18:19)
-- CODE: 
num= 35*2
print("o total da conta é", num)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:13:18)
-- CODE: 
num1=35
multi= num1*2
print( "a conta deu", multi)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
a conta deu 70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
a conta deu 70
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:10:37)
-- CODE: 
num=35
num=35
soma= num1+num2
print("o total da conta é", soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    soma= num1+num2
          ^^^^
NameError: name 'num1' is not defined. Did you mean: 'num'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    soma= num1+num2
          ^^^^
NameError: name 'num1' is not defined. Did you mean: 'num'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 14:19:45)
-- CODE: 
numb= 35
multi= numb*2
print("o total da conta é", multi)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
o total da conta é 70
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 00:08:22)
-- CODE: 
print(35*20)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
700
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:14:56)
-- CODE: 
num1=35*2
print(num1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
70
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 00:07:55)
-- CODE: 
print(35*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
70
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
70
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
